# open36

./: .dockerignore  .env.docker  .gitignore  Dockerfile  PROJECT-STATUS.md  QUICK-START-DEV.md  README.md  docker-compose.yml  docker-start.bat  docker-start.sh  pytest.ini  requirements.txt  start-all.bat  start.bat  start.sh  快速开始.md
Open436-Admin/: .env.production  Dockerfile  index.html  package-lock.json  package.json  (+1 more)
Open436-FileService/: .gitignore  Cargo.toml  Dockerfile
Open436-FileService/migrations/: 20251028_001_initial_schema.sql  20251028_002_indexes.sql  20251028_003_triggers.sql
Open436-FileService/src/: config.rs  db.rs  main.rs
Open436-FileService/src/consul/: mod.rs
Open436-FileService/src/handlers/: batch.rs  cleanup.rs  delete.rs  health.rs  info.rs  mod.rs  statistics.rs  upload.rs  usage.rs
Open436-FileService/src/middleware/: auth.rs  mod.rs  user_info.rs
Open436-FileService/src/models/: cleanup_log.rs  enums.rs  file.rs  file_usage.rs  mod.rs
Open436-FileService/src/scheduler/: cleanup_job.rs  mod.rs
Open436-FileService/src/services/: cleanup_service.rs  file_service.rs  mod.rs  statistics_service.rs  usage_service.rs
Open436-FileService/src/storage/: backend.rs  factory.rs  mod.rs  s3.rs
Open436-FileService/src/utils/: error.rs  mod.rs  path_generator.rs  validator.rs
Open436-FileService/tests/: test-api-via-kong.ps1  test-file-service.ps1
Open436-FileService/tests/integration/: upload_test.rs
Open436-FileService/tests/test-files/: create-test-images.ps1
Open436-FileService/tests/unit/: validator_test.rs
(+561 files in other folders)
